2012-01-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/bootlex.lisp, src/interp/ncomp.boot:
	Fix problem with scope of macros.

2012-01-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/primitives.lisp: Improve qsqrt_DF and
	qlog_DF.

2012-01-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/special2.spad.pamphlet: Improve ELIPIDF.

2012-01-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/gaussian.spad.pamphlet: Optimize
	Complex(DoubleFloat) arithmetic.

2012-01-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/sf.spad.pamphlet,
	src/interp/primitives.lisp, src/interp/vmlisp.lisp:
	Fix type mismatches discovered by ecl.

2012-01-23  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* Makefile.in, src/algebra/Makefile.in
	src/input/Makefile.in, src/boot/Makefile.in,
	src/lisp/Makefile.in, src/paste/Makefile.in,
	contrib/emacs/Makefile.in, config/setup-dep.mk:
	Fix 'make distclean'.

2012-01-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/bootlex.lisp, src/interp/br-con.boot,
	src/interp/br-saturn.boot, src/interp/clam.boot,
	src/interp/define.boot, src/interp/functor.boot,
	src/interp/g-boot.boot, src/interp/g-opt.boot,
	src/interp/i-analy.boot, src/interp/i-coerfn.boot,
	src/interp/i-intern.boot, src/interp/i-output.boot,
	src/interp/macros.lisp, src/interp/msgdb.boot,
	src/interp/package.boot, src/interp/parsing.lisp,
	src/interp/preparse.lisp, src/interp/primitives.lisp,
	src/interp/trace.boot, src/interp/vmlisp.lisp:
	Misc cleanups.

2012-01-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot, src/interp/primitives.lisp,
	src/interp/property.lisp, src/interp/s-parser.boot:
	Partial support for exceptions.

2012-01-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/special2.spad.pamphlet,
	src/algebra/sf.spad.pamphlet: Add complete elliptic
	integrals.

2012-01-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/trace.boot: Fix a thinko.
