@@ -1,5 +1,11 @@
 2012-01-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/bootlex.lisp, src/interp/scan.boot:
+	Make underscores significant in Spad/interpreter names
+	and strings.
+
+2012-01-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/interp/bootlex.lisp, src/interp/ncomp.boot:
 	Fix problem with scope of macros.
 
